# Senxe-Cerebellum

./: .gitignore  README.md  dashboard.html  plot_ablations.py  pyproject.toml  run_ablation_benchmark.py  senxe_demo.py  senxe_demo_robosuite.py  test_mujoco.py
.github/workflows/: test.yml
core/: __init__.py  curiosity.py  decoder.py  hud.py  neurons.py  pdi.py  video.py  vie.py
tests/: test_core.py
