[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "senxe-cerebellum"
version = "4.0.0"
description = "Biologically-grounded robotic motor control framework interfacing Cortical Labs MEA with robotic manipulators"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "gymnasium[mujoco]>=1.0.0",
    "gymnasium-robotics>=1.3.0",
    "robosuite>=1.4.0",
    "imageio>=2.30.0",
    "imageio-ffmpeg>=0.4.9",
    "tqdm>=4.60.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "cl-sdk"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
